--- a/css/video.css
+++ b/css/video.css
@@ -3,7 +3,7 @@ body {
     background-color: white;
     margin: 0;
 }
-h1, h2 {
+h1{
     font-family: 'Helvetica Neue', sans-serif;
     font-size: 190px;
     font-weight: bold;
@@ -34,4 +34,17 @@ a:link, a:visited {
 
 a:hover, a:active {
   background-color: pink;
+}
+h2, h3{
+    font-family: 'Helvetica Neue', sans-serif;
+    font-size: 100px;
+    font-weight: bold;
+    letter-spacing: -10px;
+    line-height: 1.2;
+    margin-top: 180px;
+    margin-bottom: 0px;
+    text-align:center;
+	background: linear-gradient(to right, #ff7aa0 10%, 	#FFFF00 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
