--- a/css/video.css
+++ b/css/video.css
@@ -2,6 +2,7 @@ body {
     text-align: center;
     background-color: white;
     margin: 0;
+    scroll-behavior: smooth;
 }
 h1{
     font-family: 'Helvetica Neue', sans-serif;
@@ -47,4 +48,9 @@ h2, h3{
 	background: linear-gradient(to right, #ff7aa0 10%, 	#FFFF00 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
+}
+
+
+video {
+    width: 100%;
 }
