--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(https://images.unsplash.com/photo-1483936430527-052964fdfb40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80);
+    background-image: url("../images/IMG_2908.JPG");
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
