--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../images/IMG_2908.JPG");
+    background-image: url("../images/1.gif");
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
