--- a/css/blog.css
+++ b/css/blog.css
@@ -35,3 +35,70 @@ a:link, a:visited {
 a:hover, a:active {
   background-color: pink;
 }
+
+.icons {
+    position: fixed;
+    display: flex;
+    justify-content:center;
+    padding-top: 70px;
+    max-height: 0;
+    overflow: hidden;
+    bottom: 20px;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    transition: all 5s ease;
+}
+
+.firstblog.firstblog, .secondblog.secondblog{
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 70px;
+    font-family: 'Helvetica Neue', sans-serif;
+    letter-spacing: 1px;
+}
+
+.icons:hover {
+    max-height: 2000px;
+}
+
+.iconlink:link, .iconlink:visited {
+    background-color: white;
+    margin-bottom: 0;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    padding: 0;
+}
+
+.iconlink:link {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.socialmedia{
+    display: flex;
+    justify-content:center;
+    overflow: hidden;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.smedialink:link, .smedialink:visited {
+    background-color: transparent;
+    margin-bottom: 0;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    padding: 0;
+}
+
+.smedialink:link {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
