--- a/css/blog2.css
+++ b/css/blog2.css
@@ -78,8 +78,12 @@ p.description2 , .description3{
     margin-bottom: 20px;
 }
 
-.set1{
-    width: 40%;
+.set1, .set2{
+    width: 45%;
+}
+
+.set3{
+    width: 70%
 }
 
 
@@ -95,11 +99,15 @@ p.description2 , .description3{
     right: 0;
     z-index: 2;
     transition: all 5s ease;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 
 .icons:hover {
     max-height: 2000px;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .iconlink:link, .iconlink:visited {
@@ -109,6 +117,7 @@ p.description2 , .description3{
     text-decoration: none;
     display: inline-block;
     padding: 0;
+    margin-left: 0;
 }
 
 .iconlink:link {
