--- a/css/isdisright.css
+++ b/css/isdisright.css
@@ -10,7 +10,7 @@ h1, h2 {
     letter-spacing: -10px;
     line-height: 1.2;
     margin-top: 180px;
-    margin-bottom: -35px;
+    margin-bottom: -15px;
     text-align:center;
 	background: linear-gradient(to right, #ff7aa0 30%, 	#FFFF00 80%);
 	-webkit-background-clip: text;
@@ -19,9 +19,12 @@ h1, h2 {
 p {
     color: #111;
     font-family: 'Open Sans', sans-serif;
-    font-size: 30px;
-    letter-spacing: 15px;
-    text-align: center;
+    font-size: 20px;
+    letter-spacing: 2px;
+    text-align: justify;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-bottom: 0;
 }
 a:link, a:visited {
   background-color: #ffd9b3;
