--- a/css/blog3.css
+++ b/css/blog3.css
@@ -66,7 +66,7 @@ h2, h3{
 video {
     width: 80%;
 }
-p.description2 , .description3{
+p.description2 , .description3, .description4, .description5, .description6, .description7, .description8{
     color: #111;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
@@ -78,15 +78,17 @@ p.description2 , .description3{
     margin-bottom: 20px;
 }
 
-.set1, .set2{
-    width: 45%;
+.set1{
+    height: 80%;
+}
+
+.set2{
+    width: 30%
 }
 
 .set3{
-    width: 70%
+    width: 70%;
 }
-
-
 .icons {
     position: fixed;
     display: flex;
